<resources>
    <string name="app_name">SmartFix</string>
    <string name="center">المراكز المعتمدة للصيانة</string>
    <string name="register">تسجيل فنيين</string>
    <string name="maintenance">اطلب صيانة</string>
    <string name="store">المتجر</string>
    <string name="home_page">الصفحة الرئيسية</string>
    <string name="choose_company_name">اختر الشركه المصنعه</string>
    <string name="welcome">اهلا بكم فى النسخة التجريبية </string>
    <string name="model_type">موديل الجهاز</string>
    <string name="change_type">نوع قطع الغيار</string>
    <string name="submit">تم</string>
    <string name="name">الاسم</string>
    <string name="address">العنوان</string>
    <string name="services">الخدمات</string>
    <string name="price">السعر</string>
    <string name="savetime">مدة الضمان</string>
    <string name="month">شهر</string>
    <string name="back">رجوع</string>
    <string name="latitude">خطوط العرض</string>
    <string name="longitude">خطوط الطول</string>
    <string name="none">لا يوجد</string>
    <string name="shop">الشراء الان </string>
    <string name="strore">المتجر </string>
    <string name="reyal">ريال</string>


</resources>
