<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".acitivities.MaintenanceCenterDetailsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp"
    android:padding="5dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20dp"
        android:layout_weight="0"
        android:layout_margin="3dp"
        android:padding="2dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name_mcd"
        android:textSize="20dp"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:padding="2dp"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20dp"
            android:layout_weight="0"
            android:layout_margin="3dp"
            android:padding="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_address_mcd"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:padding="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:textSize="20dp"
            android:layout_weight="0"
            android:layout_margin="3dp"
            android:padding="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_services_mcd"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:padding="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="20dp"
            android:layout_weight="0"
            android:layout_margin="3dp"
            android:padding="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lat_mcd"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:padding="2dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="20dp"
            android:layout_weight="0"
            android:layout_margin="3dp"
            android:padding="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lng_mcd"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:padding="2dp"/>
    </LinearLayout>

</LinearLayout>